--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "Akeem Adeoti",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http-errors": "^1.7.3",
-    "mongoose": "^5.7.13"
+    "mongoose": "^6.4.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
